<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ren.androidpractice.countdowner.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/notice"
        android:layout_width="298dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/cn_xiyuan"
        android:text="@string/title_cn"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/textClock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123" />

    <TextClock
        android:id="@+id/textClock"
        android:layout_width="255dp"
        android:layout_height="86dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:format12Hour="@string/format_countdown_cn_full"
        android:format24Hour="@string/format_countdown_cn_full"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/noticereview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notice" />

    <TextView
        android:id="@+id/noticereview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="63dp"
        android:ems="10"
        android:fontFamily="@font/cn_xiyuan"
        android:text="@string/review"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_red_light"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/toggle_sys_broadcast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textClock" />

    <Switch
        android:id="@+id/toggle_sys_broadcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/toggle_sys_alarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noticereview" />

    <Button
        android:id="@+id/choose_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="116dp"
        android:background="#AEF1AF"
        android:fadingEdge="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/button_time_chooser"
        app:layout_constraintBottom_toTopOf="@+id/author_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggle_sys_broadcast" />

    <TextView
        android:id="@+id/author_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/author_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_time" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

</android.support.constraint.ConstraintLayout>
